--- a/packages/domain-services/package.json
+++ b/packages/domain-services/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dhi-solutions/domain-services",
-  "version": "0.0.29",
+  "version": "0.0.30",
   "side-effects": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,7 +24,7 @@
   "dependencies": {
     "axios": "0.19.2",
     "lodash": "4.17.15",
-    "store2": "2.10.0",
-    "query-string": "6.8.2"
+    "query-string": "6.8.2",
+    "store2": "2.10.0"
   }
 }
